# cv

./: .gitignore  README.md  create_scaler.py  index.html  main_app.py  pyproject.toml  socket_app.py
src/cv/: create_scalers.py  main.py  mediapipe_to_kinect_match.py
src/cv/answer_csv/: neck_left_labeled.csv  neck_right_labeled.csv  shoulder_left_labeled.csv  shoulder_right_labeled.csv
src/cv/models/: neck_left_autoencoder_model.h5  neck_left_scaler.pkl  neck_right_autoencoder_model.h5  neck_right_scaler.pkl  shoulder_left_autoencoder_model.h5  shoulder_left_scaler.pkl  shoulder_right_autoencoder_model.h5  shoulder_right_scaler.pkl
src/cv/output_csvs/: 7HWdR4MTqPBplKQ4AAAB.csv
