[tool.poetry]
name = "cv"
version = "0.1.0"
description = ""
authors = ["powerwook <powerwook@naver.com>"]
readme = "README.md"
packages = [{include = "cv", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "*"
mediapipe = "*"
numpy = "*"
pandas = "*"
scipy = "*"
fastapi = "*"
uvicorn = "*"
python-socketio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
